fix overflow hidden, fix delay response

--- a/app/src/_styles/_generals.sass
+++ b/app/src/_styles/_generals.sass
@@ -1,10 +1,12 @@
 body
     color: $off_white
     height: auto
+    max-height: 100vh
     width: auto
     margin: 0
     background: linear-gradient(180deg, rgba(0,37,116,1) 0%, rgba(0,0,0,1) 100%)
     background-repeat: no-repeat
+    overflow: hidden
 h1
     @include font-size(80)
     line-height: normal
